salesforce/force-app/main/default/objects/Material__c/Material__c.object-meta.xml
<CustomObject>
    <description>Raw material and packaging material catalog for formula costing</description>
    <label>Material</label>
    <nameField>
        <label>Material Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Materials</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>