salesforce/force-app/main/default/objects/Material__c/fields/Case_Pack__c.field-meta.xml
<CustomField>
    <fullName>Case_Pack__c</fullName>
    <label>Case Pack</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>