salesforce/force-app/main/default/objects/Material__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>RM</fullName>
                <label>Raw Material (RM)</label>
            </value>
            <value>
                <fullName>Bottle</fullName>
            </value>
            <value>
                <fullName>Lid</fullName>
            </value>
            <value>
                <fullName>Scoop</fullName>
            </value>
            <value>
                <fullName>Shipper</fullName>
            </value>
            <value>
                <fullName>StickPack</fullName>
                <label>Stick Pack</label>
            </value>
            <value>
                <fullName>Sachet</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>